--- a/index.html
+++ b/index.html
@@ -5,33 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
+  <main>
+    <img class="imagem" src="images/illustration-hero.svg" alt="pessoa ouvindo musica">
+    <section class="principal">
+      <h1 class="principal__titulo">Order Summary</h1>
+      <p class="principal__texto">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+      <div class="principal__plano">
+        <img class="principal__plano__img" src="images/icon-music.svg" alt="icone musica">
+        <div class="principal__plano__anual">
+          <p class="principal__plano__anual__titulo">Annual Plan</p>
+          <p class="principal__plano__anual__preco">$59.99/year</p>
+        </div>
+        <p class="principal__plano__change">Change</p>
+      </div>
+      <a class="principal__proceed" href="#">Proceed to Payment</a>
+      <a class="principal__cancel" href="#">Cancel Order</a>
+    </section>
+  </main>
+  <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+-->
 </body>
 </html>
