--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
           <p class="principal__plano__anual__titulo">Annual Plan</p>
           <p class="principal__plano__anual__preco">$59.99/year</p>
         </div>
-        <p class="principal__plano__change">Change</p>
+        <a class="principal__plano__change" href="https://github.com/BrunoHeA" target="_blank">Change</a>
       </div>
-      <a class="principal__proceed" href="#">Proceed to Payment</a>
-      <a class="principal__cancel" href="#">Cancel Order</a>
+      <a class="principal__proceed" href="https://github.com/BrunoHeA" target="_blank">Proceed to Payment</a>
+      <a class="principal__cancel" href="https://github.com/BrunoHeA" target="_blank">Cancel Order</a>
     </section>
   </main>
-  <!--<div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
--->
+  <footer>
+    Challenge by <a class="footer__buttom" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a class="footer__buttom" href="https://github.com/BrunoHeA" target="_blank">Bruno Henrique</a>.
+  </footer>
 </body>
 </html>
